# ACGR

./: CMakeLists.txt  README.md
_old_code/: CCamera.cpp  CDisplayWidget.cpp  CDisplayWidget.h  CImage.cpp  CMainWindow.cpp  CMesh.cpp  CMesh.h  mipmaps.cpp
_old_code/Raytracer/: CSceneObject.h  CSphere.cpp  CSphere.h  main.cpp  raytrace.ppm
_old_code/_old2/headers/: Definitions.h
_old_code/_old3/_Resources/: CMaterial.h  CResource.cpp  CResource.h  CResourceNode.cpp  CResourceNode.h  CResourcesManager.cpp  CResourcesManager.h  CTexture.cpp  Primitives.cpp
_old_code/_old3/__Resources/: CMesh.cpp  CMesh.h  CResource.cpp  CResource.h  CResourceNode.cpp  CResourceNode.h  CResourcesManager.cpp  CResourcesManager.h
_old_code/_old3/__Scene/: CCamera.cpp  CCamera.h
_old_code/d3dcode/: AApplication.cpp  AApplication.h  ACGameEngine.h  CCamera.cpp  CCamera.h  CColor.cpp  CColor.h  CConfig.cpp  CConfig.h  CConstantBuffer.cpp  CConstantBuffer.h  CD3D.cpp  CD3D.h  CEngine.cpp  CEngine.h  CGraphics.cpp  CGraphics.h  CIndexBuffer.cpp  CIndexBuffer.h  CInputLayout.cpp  CInputLayout.h  CLog.cpp  CLog.h  CMatrix4x4.cpp  CMatrix4x4.h  CModel.cpp  CModel.h  CShader.cpp  CShader.h  CShaderManager.cpp  CShaderManager.h  CVector3.cpp  CVector3.h  CVector4.cpp  CVector4.h  CVertexBuffer.cpp  CVertexBuffer.h  CurseGine.h  Definitions.h  main.cpp
_old_code/d3dcode/other/: CColor.cpp  CColor.h  CD3D.cpp  CD3D.h  (+5 more)
_old_code/scenes/: cornell_box.xml  lights.xml  shadow.xml
demo_scenes/: cornell_box.xml  test.xml
include/: ACGR.hpp  CMakeLists.txt
include/ACGR/: Camera.hpp  Entity.hpp  FreeFlyCamera.hpp  Light.hpp  Material.hpp  Mesh.hpp  Renderer.hpp  SceneManager.hpp  SceneNode.hpp  SkyBox.hpp  Texture.hpp
shaders/: CMakeLists.txt  Frame.h  Shadow.h  Shadow.hpp  SkyBox.h
shaders/Mesh/: FS.h  VS.h  VS.hpp
shaders/Normals/: FS.h  GS.h  VS.h  VS.hpp
src/: CMakeLists.txt  Camera.cpp  Entity.cpp  Mesh.cpp  Renderer.cpp  SceneManager.cpp  SceneNode.cpp
src/Cameras/: FreeFlyCamera.cpp
src/Device/: DeviceRenderer.cpp  DeviceRenderer.hpp
src/Internal/: Parse.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp
src/Meshes/: IcoSphere.cpp  Icosahedron.cpp  Plane.cpp  Triangle.cpp
src/RayTracer/: RayTraceRenderer.cpp  RayTraceRenderer.hpp
src_demo/: CDemoMainWindow.cpp  CDemoMainWindow.h  CDisplayWidget.cpp  CDisplayWidget.h  CMakeLists.txt  DemoMainWindow.cpp  DemoMainWindow.hpp  DisplayWidget.cpp  DisplayWidget.hpp  main.cpp
(+63 files in other folders)
